fixed overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -522,6 +522,7 @@ FOOTER
 		
 		max-width:100%;
 		padding: 10px;
+		overflow-x: hidden;
 		
 	
 	}
@@ -637,6 +638,7 @@ FOOTER
 		max-height:300px;
 		margin-bottom: 10px;
 		padding:0;
+
 	}
 
 	.skills-and-education .right {
@@ -645,6 +647,8 @@ FOOTER
 		height:200px;
 		max-height:300px;
 		padding:0;
+		margin-bottom:50px;
+		
 	}
 
 	.section-title {
